# Matcha

./: .gitignore  LICENSE  MANIFEST.in  README.md  configs  data  pyproject.toml  requirements.in  requirements.txt
configs/: config.yaml  config_example.yaml
src/: align_subtomograms.py  example.py  run.py
src/core/: CrossCorrelationMatcher.py  DCT.py  FLEBasis3D.py  Matcha.py  ShiftMatcher.py  WignerDMatrices.py  __init__.py
src/matcha/: __init__.py  __main__.py  align_subtomograms.py  example.py  resources.py  run.py
src/matcha/configs/: config.yaml  config_example.yaml
src/matcha/core/: CrossCorrelationMatcher.py  FLEBasis3D.py  Matcha.py  SOFFT.py  WignerDGradients.py
src/matcha/utils/: __init__.py  io_utils.py  rotation_ops.py  run_utils.py  setup_utils.py
src/utils/: io_utils.py  run_utils.py  setup_utils.py  volume_ops.py  volume_rotation.py
tests/: test_cli_help.py  test_resources.py
