[project]
name = "matcha"
version = "0.1.0"
description = "Fast volume alignment by frequency-marched Newton for subtomogram averaging workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Fabian Kruse" },
  { name = "Valentin Debarnot" },
  { name = "Vinith Kishore" },
  { name = "Ivan Dokmanić" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "numba-cuda[cu12]",
  "numpy",
  "scipy",
  "pandas",
  "pyyaml",
  "spherical",
  "quaternionic",
  "starfile",
  "cufinufft",
  "finufft",
  "mrcfile",
  "ml-collections",
  "torch-harmonics",
]

[project.optional-dependencies]
dev = ["pip-tools"]

[project.scripts]
matcha = "matcha.run:cli"
matcha-example = "matcha.example:cli"

[project.urls]
Homepage = "https://github.com/swing-research/Matcha"
Repository = "https://github.com/swing-research/Matcha"
Documentation = "https://arxiv.org/abs/2603.15285"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["matcha*"]

[tool.setuptools.package-data]
matcha = ["configs/*.yaml", "data/*.mat"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
